--- a/files/inventory/networks_10.yml.j2
+++ b/files/inventory/networks_10.yml.j2
@@ -42,6 +42,9 @@ internal_net:
   kube:
     cidr: "172.27.0.0/16"
     # cidr6: "fd00:172:27::/56"
+  talos:
+    cidr: "172.28.0.0/16"
+    # cidr6: "fd00:172:28::/56"
 
 wg_net:
   mt:
