--- a/files/inventory/networks_40.yml.j2
+++ b/files/inventory/networks_40.yml.j2
@@ -28,6 +28,7 @@ vips:
     ceph_nfs: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(1, wantlist=true) }}
     ceph_rgw: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(2, wantlist=true) }}
     kube_cp: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(3, wantlist=true) }}
+    talos_cp: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
   general:
     ceph_nfs: {{ subnets.general.vips | andrei.utils.ipaddr_concat(1, wantlist=true) }}
   san:
@@ -35,3 +36,6 @@ vips:
   kube:
     nginx: {{ subnets.kube.lb | andrei.utils.ipaddr_concat(1, wantlist=true) }}
     prom: {{ subnets.kube.lb | andrei.utils.ipaddr_concat(2, wantlist=true) }}
+  talos:
+    nginx: {{ subnets.talos.lb | andrei.utils.ipaddr_concat(1, wantlist=true) }}
+    prom: {{ subnets.talos.lb | andrei.utils.ipaddr_concat(2, wantlist=true) }}
