--- a/files/k8s/ingress-nginx.yml.j2
+++ b/files/k8s/ingress-nginx.yml.j2
@@ -7,7 +7,7 @@ controller:
   service:
     externalTrafficPolicy: Local
     type: LoadBalancer
-    loadBalancerIP: "{{ vips.kube.nginx | ansible.utils.ipv4 | first }}"
+    loadBalancerIP: "{{ vips[kube_name].nginx | ansible.utils.ipv4 | first }}"
   metrics:
     enabled: true
     serviceMonitor:
