--- a/files/talos/calico-felix.yml.j2
+++ b/files/talos/calico-felix.yml.j2
@@ -12,3 +12,5 @@ spec:
   reportingInterval: 0s
   vxlanEnabled: false
   wireguardEnabled: false
+  # https://github.com/kubernetes-sigs/kubespray/blob/93724ed29cb3347e8d92eb3af6491497f58333c5/docs/calico.md#optional--define-default-endpoint-to-host-action
+  defaultEndpointToHostAction: Accept
