--- a/files/talos/worker-patch.yaml.j2
+++ b/files/talos/worker-patch.yaml.j2
@@ -7,7 +7,4 @@ machine:
       - deviceSelector:
           hardwareAddr: "{{ vm_default_mac }}"
         dhcp: true
-  nodeLabels:
-    cpu_tier: "{{ hostvars[vm_host].cpu_tier }}"
-    vm_host: "{{ vm_host }}"
-    "node-role.kubernetes.io/worker": ""
+  nodeLabels: {{ node_labels | to_json }}
