Replace certbot with lego

--- a/files/webgw/nginx/photoprism.conf.j2
+++ b/files/webgw/nginx/photoprism.conf.j2
@@ -15,8 +15,8 @@ server {
 
     client_max_body_size 500M;
 
-    ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
+    ssl_certificate /etc/lego/certificates/{{ domain }}.crt;
+    ssl_certificate_key /etc/lego/certificates/{{ domain }}.key;
     ssl_dhparam {{ nginx_dhparam }};
 
     access_log {{ nginx_sites_logs }}/access-photoprism.{{ domain }}.log {{ nginx_access_log_options }};
