--- a/files/webgw/nginx/gitlab.conf.j2
+++ b/files/webgw/nginx/gitlab.conf.j2
@@ -13,8 +13,8 @@ server {
     listen [::]:443 ssl http2;
     server_name gitlab.{{ domain }};
 
-    ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem;
+    ssl_certificate /etc/lego/certificates/{{ domain }}.crt;
+    ssl_certificate_key /etc/lego/certificates/{{ domain }}.key;
     ssl_dhparam {{ nginx_dhparam }};
 
     access_log {{ nginx_sites_logs }}/access-gitlab.{{ domain }}.log {{ nginx_access_log_options }};
