--- a/files/inventory/40-net-late-merge-and-vips.j2
+++ b/files/inventory/40-net-late-merge-and-vips.j2
@@ -29,6 +29,9 @@ vips:
     ceph_rgw: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(2, wantlist=true) }}
     kube_cp: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(3, wantlist=true) }}
     talos_cp: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(4, wantlist=true) }}
+    localgw01: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(5, wantlist=true) }}
+    localgw02: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(6, wantlist=true) }}
+    localgw03: {{ subnets.vm.vips | andrei.utils.ipaddr_concat(7, wantlist=true) }}
   general:
     ceph_nfs: {{ subnets.general.vips | andrei.utils.ipaddr_concat(1, wantlist=true) }}
   san:
