--- a/files/talos/calico-bgp.yml.j2
+++ b/files/talos/calico-bgp.yml.j2
@@ -4,7 +4,7 @@ kind: BGPPeer
 metadata:
   name: global-rb5009
 spec:
-  peerIP: {{ (hostvars['rb5009'].mt_routing_ids | selectattr('name', 'eq', 'vm') | first).id }}
+  peerIP: {{ (hostvars['rb5009'].mt_routing_ids | selectattr('name', 'eq', host_net) | first).id }}
   asNumber: {{ mt_bgp_peers[0].as }}
 
 ---
