Fix kvm-hv networkd config
e56c3d6306a2b808a0600bbc420b268278fdda1a was incomplete.

--- a/files/kvm_hv/bond0.network.j2
+++ b/files/kvm_hv/bond0.network.j2
@@ -2,7 +2,7 @@
 Name=bond0
 
 [Network]
-{% for vid in all_net | dict2items | map(attribute='value') | selectattr('vlan', 'defined') | map(attribute='vlan') | sort %}
+{% for vid in all_net | dict2items | rejectattr('key', 'in', host_exclude_nets) | map(attribute='value') | selectattr('vlan', 'defined') | map(attribute='vlan') | sort %}
 VLAN=bond0.{{ vid }}
 {% endfor %}
 LinkLocalAddressing=no
