--- a/roles/loki/templates/config.yml.j2
+++ b/roles/loki/templates/config.yml.j2
@@ -21,13 +21,7 @@ common:
 
 schema_config:
   configs:
-    - from: 2020-10-24
-      store: boltdb-shipper
-      object_store: filesystem
-      schema: v11
-      index:
-        prefix: index_
-        period: 24h
+    {{ loki_schema_configs | to_nice_yaml(indent=2) | indent(4) }}
 
 ruler:
   alertmanager_url: {{ loki_alertmanager_url }}
