More Loki fixes
- Add PrivateTmp to fix `open /tmp/marker-view-57964350: read-only file system`
- Remove `allow_structured_metadata: false` as new schema is in use now

--- a/roles/loki/templates/loki.service.j2
+++ b/roles/loki/templates/loki.service.j2
@@ -18,6 +18,7 @@ ProtectKernelTunables=true
 NoNewPrivileges=true
 ProtectHome=true
 ProtectSystem=strict
+PrivateTmp=true
 ReadWritePaths={{ loki_workdir }}
 
 [Install]
