--- a/files/webgw/nginx/default_reject.conf.j2
+++ b/files/webgw/nginx/default_reject.conf.j2
@@ -7,9 +7,10 @@ server {
 
 {% if nginx_default_reject_ssl | default(true) %}
 server {
-    listen               443 ssl http2 default_server;
-    listen               [::]:443 ssl http2 default_server;
-    server_name          _;
+    listen       443 ssl default_server;
+    listen       [::]:443 ssl default_server;
+    http2        on;
+    server_name  _;
     ssl_reject_handshake on;
 }
 {% endif %}
