--- a/files/webgw/nginx/photoprism.conf.j2
+++ b/files/webgw/nginx/photoprism.conf.j2
@@ -9,8 +9,9 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name photoprism.{{ domain }};
 
     client_max_body_size 500M;
