--- a/roles/cpupower/templates/cpupower.service.j2
+++ b/roles/cpupower/templates/cpupower.service.j2
@@ -5,7 +5,7 @@ After=syslog.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-EnvironmentFile=/etc/sysconfig/cpupower
+EnvironmentFile={{ cpupower_config_file }}
 ExecStart=/usr/bin/cpupower $CPUPOWER_START_OPTS
 ExecStop=/usr/bin/cpupower $CPUPOWER_STOP_OPTS
 
