--- a/roles/mktxp/templates/mktxp.conf.j2
+++ b/roles/mktxp/templates/mktxp.conf.j2
@@ -2,51 +2,66 @@
 # https://github.com/akpw/mktxp/blob/main/mktxp/cli/config/mktxp.conf
 {% for name, config in mktxp_config.items() %}
 [{{ name }}]
-    enabled = {{ config.enabled | default(true) }}
-
-    hostname = {{ config.hostname }}
-    port = {{ config.port | default(8729) }}
-
-    username = {{ config.username }}
-    password = {{ config.password }}
-
-    use_ssl = {{ config.use_ssl | default(true) }}
-    no_ssl_certificate = {{ config.no_ssl_certificate | default(false) }}
-    ssl_certificate_verify = {{ config.ssl_certificate_verify | default(true) }}
-
-    installed_packages = {{ config.installed_packages | default(false) }}
-    dhcp = {{ config.dhcp | default(false) }}
-    dhcp_lease = {{ config.dhcp_lease | default(false) }}
-
-    connections = {{ config.connections | default(false) }}
-    connection_stats = {{ config.connection_stats | default(false) }}
-
-    pool = {{ config.pool | default(true) }}
-    interface = {{ config.interface | default(true) }}
-
-    firewall = {{ config.firewall | default(false) }}
-    ipv6_firewall = {{ config.ipv6_firewall | default(false) }}
-    ipv6_neighbor = {{ config.ipv6_neighbor | default(false) }}
-
-    poe = {{ config.poe | default(false) }}
-    monitor = {{ config.monitor | default(true) }}
-    netwatch = {{ config.netwatch | default(false) }}
-    public_ip = {{ config.public_ip | default(false) }}
-    route = {{ config.route | default(false) }}
-    wireless = {{ config.wireless | default(false) }}
-    wireless_clients = {{ config.wireless_clients | default(false) }}
-    capsman = {{ config.capsman | default(false) }}
-    capsman_clients = {{ config.capsman_clients | default(false) }}
-
-    kid_control_devices = {{ config.kid_control_devices | default(false) }}
-
-    user = {{ config.user | default(false) }}
-    queue = {{ config.queue | default(false) }}
-
-    remote_dhcp_entry = {{ config.remote_dhcp_entry | default('None') }}
-
-    use_comments_over_names = {{ config.use_comments_over_names | default(false) }}
-
-    check_for_updates = {{ config.check_for_updates | default(false) }}
+{% for k,v in config.items() %}
+    {{ k }} = {{ v }}
+{% endfor %}
 
 {% endfor %}
+
+[default]
+    # this affects configuration of all routers, unless overloaded on their specific levels
+
+    enabled = True          # turns metrics collection for this RouterOS device on / off
+    hostname = localhost    # RouterOS IP address
+    port = 8729             # RouterOS IP Port
+
+    username = username     # RouterOS user, needs to have 'read' and 'api' permissions
+    password = password
+
+    use_ssl = True                  # enables connection via API-SSL servis
+    no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
+    ssl_certificate_verify = True   # turns SSL certificate verification on / off
+    plaintext_login = True          # for legacy RouterOS versions below 6.43 use False
+
+    installed_packages = False      # Installed packages
+    dhcp = False                    # DHCP general metrics
+    dhcp_lease = False              # DHCP lease metrics
+
+    connections = False             # IP connections metrics
+    connection_stats = False        # Open IP connections metrics
+
+    interface = True                # Interfaces traffic metrics
+
+    route = False                   # IPv4 Routes metrics
+    pool = True                     # IPv4 Pool metrics
+    firewall = False                # IPv4 Firewall rules traffic metrics
+    neighbor = False                # IPv4 Reachable Neighbors
+
+    ipv6_route = False              # IPv6 Routes metrics
+    ipv6_pool = False               # IPv6 Pool metrics
+    ipv6_firewall = False           # IPv6 Firewall rules traffic metrics
+    ipv6_neighbor = False           # IPv6 Reachable Neighbors
+
+    poe = False                     # POE metrics
+    monitor = True                  # Interface monitor metrics
+    netwatch = False                # Netwatch metrics
+    public_ip = False               # Public IP metrics
+    wireless = False                # WLAN general metrics
+    wireless_clients = False        # WLAN clients metrics
+    capsman = False                 # CAPsMAN general metrics
+    capsman_clients = False         # CAPsMAN clients metrics
+
+    kid_control_assigned = False    # Allow Kid Control metrics for connected devices with assigned users
+    kid_control_dynamic = False     # Allow Kid Control metrics for all connected devices, including those without assigned user
+
+    user = False                    # Active Users metrics
+    queue = False                   # Queues metrics
+
+    bgp = False                     # BGP sessions metrics
+
+    remote_dhcp_entry = None        # An MKTXP entry to provide for remote DHCP info / resolution
+    remote_capsman_entry = None     # An MKTXP entry to provide for remote capsman info
+
+    use_comments_over_names = False # when available, forces using comments over the interfaces names
+
+    check_for_updates = False       # check for available ROS updates
