Update nginx_exporter role
- Bump from ancient version
- Support ARM

--- a/roles/nginx_exporter/templates/nginx_exporter.service.j2
+++ b/roles/nginx_exporter/templates/nginx_exporter.service.j2
@@ -10,9 +10,13 @@ Type=simple
 User=nginx_exporter
 Group=nginx_exporter
 ExecStart={{ _nginx_exporter_binary_install_dir }}/nginx_exporter \
-  -nginx.scrape-uri="{{ nginx_exporter_scrape_uri }}" \
-  -nginx.ssl-verify={{ nginx_exporter_ssl_verify }} \
-  -web.listen-address="{{ nginx_exporter_web_listen_address }}"
+  --nginx.scrape-uri="{{ nginx_exporter_scrape_uri }}" \
+{% if nginx_exporter_ssl_verify %}
+  --nginx.ssl-verify \
+{% else %}
+  --no-nginx.ssl-verify \
+{% endif %}
+  --web.listen-address="{{ nginx_exporter_web_listen_address }}"
 Restart=always
 ExecReload=/bin/kill -HUP $MAINPID
 NoNewPrivileges=true
