--- a/files/webgw/nginx/nextcloud.conf.j2
+++ b/files/webgw/nginx/nextcloud.conf.j2
@@ -30,6 +30,8 @@ server {
 
         # Proxy Connection Settings
         proxy_buffers 32 4k;
+        proxy_busy_buffers_size 8k;
+        proxy_buffer_size 4k;
         proxy_connect_timeout 240;
         proxy_headers_hash_bucket_size 128;
         proxy_headers_hash_max_size 1024;
