--- a/files/inventory/40-net-late-merge-and-vips.j2
+++ b/files/inventory/40-net-late-merge-and-vips.j2
@@ -27,6 +27,7 @@
     "domain": "man.{{ domains['hb'] }}",
   },
   "san": {
+    "dhcp_range": subnets.san.clients | ansible.utils.ipv4 | last | andrei.utils.routeros_dhcp_range(skip_last=1),
     "domain": "san.{{ domains['hb'] }}",
   },
 } %}
