--- a/files/talos/cilium-values.yml.j2
+++ b/files/talos/cilium-values.yml.j2
@@ -6,6 +6,9 @@ rollOutCiliumPods: true
 bgpControlPlane:
   enabled: true
 
+# https://docs.cilium.io/en/stable/network/kubernetes/kubeproxy-free/#nodeport-devices-port-and-bind-settings
+devices: "enx{{ vm_default_mac.split(':')[:3] | join('') }}+"
+
 # https://docs.cilium.io/en/stable/network/kubernetes/ipam-multi-pool/#enable-multi-pool-ipam-mode
 autoDirectNodeRoutes: true
 endpointRoutes:
