--- a/files/talos/cilium-values.yml.j2
+++ b/files/talos/cilium-values.yml.j2
@@ -43,12 +43,19 @@ routingMode: native
 loadBalancer:
   mode: dsr
 
- {# ingressController:
-   enabled: true
-   loadbalancerMode: shared
-   service:
-     externalTrafficPolicy: Cluster  # Local isn't being advertised (and doesn't preserve client IPs anyway)
-     loadBalancerIP: "{{ vips.talos.cilium_ingress | ansible.utils.ipv4 | first }}" #}
+hubble:
+  relay:
+    enabled: true
+  ui:
+    enabled: true
+
+# https://github.com/cilium/cilium/issues/29967
+# ingressController:
+#   enabled: true
+#   loadbalancerMode: shared
+#   service:
+#     # Local isn't being advertised (and doesn't preserve client IPs anyway)
+#     externalTrafficPolicy: Cluster
 
 # Talos specific
 # https://www.talos.dev/v1.7/kubernetes-guides/network/deploying-cilium/
