--- a/files/talos/node-patch.yaml.j2
+++ b/files/talos/node-patch.yaml.j2
@@ -26,8 +26,13 @@ machine:
 {% if 'talos_cp' in group_names %}
 cluster:
   allowSchedulingOnControlPlanes: {{ talos_schedule_on_control_plane }}
+  etcd:
+    advertisedSubnets:
+      - "{{ all_net[host_net].cidr }}"
   # https://www.talos.dev/v1.7/reference/configuration/v1alpha1/config/#Config.cluster.apiServer
   apiServer:
+    extraArgs:
+      v: "2"  # INFO level https://github.com/kubernetes/community/blob/master/contributors/devel/sig-instrumentation/logging.md
     admissionControl:
       - name: PodSecurity
         configuration:
