Fix k8s AM warnings
- Route InfoInhibitor to null
- Increase retention period above repeat interval

--- a/files/k8s/prom.yml.j2
+++ b/files/k8s/prom.yml.j2
@@ -16,6 +16,7 @@ alertmanager:
 
   alertmanagerSpec:
     externalUrl: "http://am.{{ kube_ingress_domain }}"
+    retention: 192h
 
   templateFiles: {{ alertmanager_template_files | to_json }}
 
@@ -27,6 +28,10 @@ alertmanager:
 {% else %}
       receiver: 'null'
 {% endif %}
+      routes:
+        - receiver: 'null'
+          matchers:
+            - alertname = "InfoInhibitor"
     receivers:
       - name: 'null'
 {% if vault_alertmanager_discord_webhook_url is defined %}
