Allow grafana to connect to k8s Prometheus

--- a/files/k8s/prom.yml.j2
+++ b/files/k8s/prom.yml.j2
@@ -54,7 +54,7 @@ prometheus:
       - /
     pathType: ImplementationSpecific
     annotations:
-      nginx.ingress.kubernetes.io/whitelist-source-range: "{{ firewall_trusted_sources | join(',') }}"
+      nginx.ingress.kubernetes.io/whitelist-source-range: "{{ (firewall_trusted_sources + node_exporter_allow_ips) | join(',') }}"
 
   prometheusSpec:
     podMonitorSelectorNilUsesHelmValues: false
